<resources>
    <string name="app_name">Guía de las Ligas</string>
    <string name="app_name_normalize" translatable="false">Guia-Liga</string>
    <string name="player_comparator_message_versus">Escoge una Competición y una Temporada para iniciar la Comparativa</string>
    <string name="player_detail_error">Se ha producido un error al descargar el contenido. Intentelo de nuevo más tarde.</string>
    <string name="player_detail_not_updated">Sin conexión a Internet no podrá consultar los datos actualizados de este jugador.</string>
    <string name="player_comparator_not_content">No existen datos para ese jugador y no es posible seleccionarlo para la comparativa. Por favor, seleccione otro jugador</string>
    <string name="error_player_message_noplayer">Lo sentimos pero no es posible recuperar la información de este jugador.</string>
    <string name="error_player_message">Lo sentimos pero no es posible recuperar la información de este jugador sin conexión a Internet. Compruebe su conexión e intentelo de nuevo más tarde por favor.</string>
    <string name="player_comparator_back">Atrás</string>
    <string name="player_comparator_cancel">Cancelar</string>
    <string name="player_comparator_noplayer_left">SELECCIONA EL PRIMER JUGADOR PARA COMPARAR</string>
    <string name="player_comparator_noplayer_right">SELECCIONA EL SEGUNDO JUGADOR PARA COMPARAR</string>
    <string name="player_comparator_goles_marc">GOLES</string>
    <string name="player_comparator_goles_enc">GOLES ENCAJADOS</string>
    <string name="player_comparator_partidos">PARTIDOS</string>
    <string name="player_comparator_minutos">MINUTOS</string>
    <string name="player_comparator_tarjetas_am">T.AMARILLAS</string>
    <string name="player_comparator_tarjetas_ro">T.ROJAS</string>
    <string name="player_comparator_asistencias">ASISTENCIAS</string>
    <string name="player_comparator_paradas">PARADAS</string>
    <string name="player_anos">&#160;Años</string>
    <string name="player_noticias">Ver Noticias de este jugador</string>
    <string name="player_comparator">Comparar Jugador</string>
    <string name="player_estadisticas">Estadísticas</string>
    <string name="player_trayectoria">Trayectoria</string>
    <string name="player_no_trayectoria">No hay información sobre la trayectoria de este jugador</string>
    <string name="player_no_palmares">Este jugador no tiene títulos</string>
    <string name="player_no_estadisticas">Este jugador no tiene estadísticas</string>
    <string name="player_palmares">Palmarés</string>
    <string name="player_trayectoria_temp">Temp.</string>
    <string name="player_trayectoria_team">Equipo</string>
    <string name="player_trayectoria_partidos">Partidos</string>
    <string name="player_trayectoria_goles">Goles</string>
    <string name="player_trayectoria_competiciones_mostradas">Los datos que aparecen hacen referencia a las siguientes competiciones:&#160;</string>
    <string name="player_goles">Goles</string>
    <string name="player_goles_enc">Goles Enc.</string>
    <string name="player_tarjetas_amarillas">Tarjetas Amarillas</string>
    <string name="player_partidos_jugados">Partidos Jugados</string>
    <string name="player_tarjetas_rojas">Tarjetas Rojas</string>
    <string name="player_minutos">Minutos</string>
    <string name="player_paradas">Paradas</string>
    <string name="player_asistencias">Asistencias</string>
    <string name="player_fecha_de_nacimiento">Fecha de Nacimiento -&#160;</string>
    <string name="player_pais">Pais -&#160;</string>
    <string name="player_edad">Edad -&#160;</string>
    <string name="player_palmares_button">PALMARÉS</string>
    <string name="player_informacion_button">INFORMACIÓN</string>
    <string name="player_trayectoria_button">TRAYECTORIA</string>
    <string name="team_fragmentname_resumen">La Selección</string>
    <string name="team_estadisticas_min">Estadísticas</string>
    <string name="team_palmares">Palmarés</string>
    <string name="team_portero">Portero</string>
    <string name="team_defensa">Defensa</string>
    <string name="team_centrocampista">Centrocampista</string>
    <string name="team_delantero">Delantero</string>
    <string name="team_detail_not_updated">Sin conexión a Internet no podrá consultar los datos actualizados de su equipo.</string>
    <string name="team_detail_error">Se ha producido un error al descargar el contenido. Intentelo de nuevo más tarde.</string>
    <string name="team_hispalmares_competitionname">Mundial</string>
    <string name="team_equipaciones">Equipaciones</string>
    <string name="team_equipacion_local">Local</string>
    <string name="team_equipacion_visitante">Visitante</string>
    <string name="team_equipacion_alternativa">Alternativa</string>
    <string name="team_mister_label">El Seleccionador</string>
    <string name="team_star_label">La Estrella</string>
    <string name="team_star_position">Posicion&#160;</string>
    <string name="team_star_numinternational">Veces Internacional&#160;</string>
    <string name="team_star_age">Edad&#160;</string>
    <string name="team_star_stature">Estatura&#160;</string>
    <string name="team_star_weight">Peso&#160;</string>
    <string name="team_star_club">Club&#160;</string>
    <string name="team_champion_spain">España</string>
    <string name="team_champion_italy">Italia</string>
    <string name="team_champion_brasil">Brasil</string>
    <string name="team_champion_france">Francia</string>
    <string name="team_champion_germany">Alemania</string>
    <string name="team_champion_argentina">Argentina</string>
    <string name="team_champion_england">Inglaterra</string>
    <string name="team_champion_uruguay">Uruguay</string>
    <string name="team_detail_players">Jugadores</string>
    <string name="team_detail_clubs">Clubes</string>
    <string name="team_detail_referees">Árbitros&#160;</string>
    <string name="team_federation_name">Nombre&#160;</string>
    <string name="team_federation_fundation">Fundacion&#160;</string>
    <string name="team_federation_affiliation">Afiliación a la FIFA&#160;</string>
    <string name="team_federation_web">Web&#160;</string>
    <string name="team_noticias">Ver Noticias de este equipo</string>
    <string name="team_ver_mapa">Ver Mapa</string>
    <string name="team_fundacion">"Fundacion - "</string>
    <string name="team_web">"Web - "</string>
    <string name="team_estadio">"Estadio - "</string>
    <string name="team_historia">Historia</string>
    <string name="team_presidente">Presidente</string>
    <string name="team_manager">Director Deportivo</string>
    <string name="team_mister">Entrenador</string>
    <string name="team_fecha_de_nacimiento">Fecha de Nacimiento -&#160;</string>
    <string name="team_fecha_del_cargo">Fecha del Cargo -&#160;</string>
    <string name="team_goles_a_favor">Goles a favor</string>
    <string name="team_partidos_jugados">Partidos Jugados</string>
    <string name="team_tarjetas_amarillas">Tarjetas Amarillas</string>
    <string name="team_tarjetas_rojas">Tarjetas Rojas</string>
    <string name="team_partidos_ganados">Partidos Ganados</string>
    <string name="team_partidos_empatados">Partidos Empatados</string>
    <string name="team_partidos_perdidos">Partidos Perdidos</string>
    <string name="team_autor_not_available">Nuestra opinión</string>
    <string name="team_charge_not_available">Diario AS</string>
    <string name="team_estadisticas">ESTADÍSTICAS</string>
    <string name="team_informacion">INFORMACIÓN</string>
    <string name="team_plantilla">PLANTILLA</string>
    <string name="spinner_message">Cargando información</string>
    <string name="spinner_message_team">Cargando información del equipo</string>
    <string name="spinner_message_player">Cargando información del jugador</string>
    <string name="spinner_message_teams">Cargando información de los equipos</string>
    <string name="spinner_message_calendar">Cargando información del calendario</string>
    <string name="spinner_message_carrusel">Cargando información del carusel</string>
    <string name="spinner_message_clasificacion">Cargando información de la clasificación</string>
    <string name="spinner_message_stadiums">Cargando información de las sedes</string>
    <string name="spinner_message_palmares">Cargando información del palmarés del mundial</string>
    <string name="spinner_message_spades">Cargando información</string>
    <string name="section_not_conection">Sin conexión a Internet no es posible acceder a esta sección.</string>
    <string name="section_error_download">Se ha producido un error mientras se intentaba descargar la información. El contenido de esta sección puede estar desactualizado</string>
    <string name="section_not_conection_notupdated">Sin conexión a Internet el contenido de esta sección puede estar desactualizado.</string>
    <string name="section_download_error">Se ha producido un error al descargar el contenido. Intentelo de nuevo más tarde.</string>
    <string name="menu_teams">Competiciones</string>
    <string name="menu_order">Ordenación</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_clasificacion">Clasificación</string>
    <string name="menu_carrusel">Carrusel</string>
    <string name="menu_comparador_jugadores">Comparador de jugadores</string>
    <string name="menu_search">Buscador</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_palmares">Palmarés</string>
    <string name="menu_sedes">Sedes</string>
    <string name="menu_news">Noticias</string>
    <string name="menu_photos">Fotos</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_trivias">TriviasAS</string>
    <string name="item_menu_share">Compartir</string>
    <string name="group">Grupo&#160;</string>
    <string name="video_error">Error al cargar el vídeo seleccionado</string>
    <string name="video_error_general">No se ha podido cargar el vídeo seleccionado en estos momentos</string>
    <string name="video_error_message_no_internet">No dispone de internet para poder visualizar el vídeo seleccionado</string>
    <string name="video_error_message_region">No ha sido posible cargar el vídeo seleccionado para la región en la que se encuentra</string>
    <string name="accept">OK</string>
    <string name="share_mens_title">Compartir&#160;</string>
    <string name="connection_error_title">Error de Conexion</string>
    <string name="connection_atention_title">Atención</string>
    <string name="connection_error_message">Lo sentimos pero no es posible ver esta sección sin conexión a Internet. Compruebe su conexión e intentelo de nuevo más tarde por favor.</string>
    <string name="mens_share_part1_1">Te recomiendo leer al \"</string>
    <string name="mens_share_part1_2">Te recomiendo leer a \"</string>
    <string name="share_title">Guía de las Ligas - Vía Diario AS</string>
    <string name="mens_share_part2">\" en la app de Guía de Las Ligas&#160;</string>
    <string name="mens_share_part3">Guía de las Ligas.</string>
    <string name="mens_share_part4_1">Sigue el partido&#160;</string>
    <string name="mens_share_part4_2">&#160;en la app del Guía de las Ligas.</string>
    <string name="mens_share_match">Sigue el partido %1$s - %2$s en la app Guía de Las Ligas. %3$s</string>
    <string name="mens_share_team">Te recomiendo leer al %1$s en la app Guía de Las Ligas de Diario AS. %2$s</string>
    <string name="mens_share_player">Te recomiendo leer a %1$s en la app Guía de Las Ligas de Diario AS. %2$s</string>
    <string name="mens_share_compare_players">Te recomiendo ver la comparativa entre %1$s y %2$s en la app Guía de Las Ligas de Diario AS. %3$s</string>
    <string name="carrusel_detail_error">Se ha producido un error al descargar el contenido. Intentelo de nuevo más tarde.</string>
    <string name="defualt" translatable="false">Default</string>
</resources>