<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearPlayer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/dataTeam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/clear_gray"
                android:paddingTop="10dip" >

                <ImageView
                    android:id="@+id/photoTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="5dip"
                    android:contentDescription="@string/defualt" />

                <TextView
                    android:id="@+id/nameTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dip"
                    android:layout_toRightOf="@+id/photoTeam"
                    android:maxLines="2"
                    android:paddingBottom="5dip"
                    android:paddingTop="5dip"
                    android:textSize="@dimen/size_fragment_team_22" />
            </RelativeLayout>

            <TextView
                android:id="@+id/porterosText"
                style="@style/subtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_portero" />

            <LinearLayout
                android:id="@+id/porteroTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >
            </LinearLayout>

            <ImageView
                android:id="@+id/porteroGap"
                style="@style/team_gap_bar_light"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:contentDescription="@string/defualt" />

            <TextView
                android:id="@+id/defensaText"
                style="@style/subtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_defensa" />

            <LinearLayout
                android:id="@+id/defensaTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >
            </LinearLayout>

            <ImageView
                android:id="@+id/defensaGap"
                style="@style/team_gap_bar_light"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:contentDescription="@string/defualt" />

            <TextView
                android:id="@+id/medioText"
                style="@style/subtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_centrocampista" />

            <LinearLayout
                android:id="@+id/medioTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >
            </LinearLayout>

            <ImageView
                android:id="@+id/medioGap"
                style="@style/team_gap_bar_light"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:contentDescription="@string/defualt" />

            <TextView
                android:id="@+id/delanteroText"
                style="@style/subtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_delantero" />

            <LinearLayout
                android:id="@+id/delanteroTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/genericTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>